--- a/src/app/invoices/invoices.component.css
+++ b/src/app/invoices/invoices.component.css
@@ -14,6 +14,7 @@ mat-sidenav, mat-sidenav-content {
 mat-sidenav {
   background-color: #0277b1;
   width: 300px;
+  max-width: 100%;
 }
 #logo {
   width: 180px;
@@ -33,7 +34,6 @@ mat-nav-list {
 /* ===================== CONTENT ======================= */
 body {
     width: 100%;
-    height: 100%;
     background-color: #fff;
 }
 #content {
@@ -44,46 +44,24 @@ body {
   position: fixed;
   z-index: 1;
 }
-#marca {
-  margin-top: 3rem;
+#marca, #colecao, #repres, #cnpj, #botao-buscar, #filtro {
+  width: 100%;
 }
-#formulario, #botao-buscar {
-  margin-top: 1rem;
-}
-#botao-buscar {
-  z-index: -1;
+#marca, #botao-buscar, #filtro {
+  margin-top: 2rem;
 }
 #tabela {
-    margin-top: 1rem;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(151, 151, 151, 0.5);
+  width: 100%;
+  height: 500px;
 }
-#titulos-tabela {
-    color: #fff;
-    background-color: #1e366c;
-}
-#razao_social {
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(151, 151, 151, 0.5);
-}
-#cnpj {
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(151, 151, 151, 0.5);
-} 
 
 /* ============================ DROPDOWNS =================================== */
-.mat-form-field {
-  margin-top: 1rem;
-}
 
 /* =============================== GRID INVOICES ================================ */
 .tabela-container {
   margin-top: 1rem;
-  height: 450px;
-  width: 800px;
+  height: 200px;
+  width: 100%;
   overflow: auto;
 }
 table {
@@ -106,27 +84,6 @@ th, td {
 }
 
 /* =========================== FORM DE CNPJ ============================== */
-/* label color */
-.input-field label {
-    color: #000;
-  }
-  /* label focus color */
-  .input-field input[type=text]:focus + label {
-    color: #00aaff;
-    font-style: bolder;
-  }
-  /* label underline focus color */
-  .input-field input[type=text]:focus {
-    border-bottom: 1px solid #00aaff;
-    box-shadow: 0 1px 0 0 #0277b1;
-  }
- /* BUTTON */
- .btn {
-    background-color: #1e366c;
-}
-.btn:hover {
-    background-color: #00aaff;
-}
 
 /* ========================== BREAKPOINTS - REPONSIVIDADE ========================== */
 
