--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -1,19 +1,32 @@
+
 body {
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    background-color: black;
 }
 form {
-    color: #fff;
-    background-color: #0277bd;
+    background-color: white;
     border-radius: 1rem;
-    margin-top: 10%;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    margin-top: 25%;
+    
 }
 #logo {
-    width: 100%;
+    width: 85%;
     margin-left: 10%;
 }
+/* .mat-input-element {
+    font: inherit;
+    background: 0 0;
+    color: white;
+    border: none;
+    outline: 0;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-width: 100%;
+    vertical-align: bottom;
+    text-align: inherit;
+} */
 #mensagem {
     background-color: #e23939;
     border-radius: 10px;
@@ -24,7 +37,7 @@ form {
     margin-left: auto;
     margin-right: auto;
     width: 300px;
-    max-width: 100%;
+    max-width: 90%;
     padding: 2rem;
 }
 #login, #senha, #botao-entrar {
