--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -8,11 +8,12 @@
         <mat-sidenav-container>
 
             <mat-sidenav #sidenav mode="over" [(opened)]="sidenavAberta">
-                <img id="logo" href="#" 
+                <!-- <img id="logo" href="#" 
                 src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" 
-                alt="wise-erp-logo">            
+                alt="wise-erp-logo"> -->
+                <img id="logo" href="#" src="../../assets/logo.png" alt="restoque-logo">
                 <div id="fecharmenu">
-                    <button mat-raised-button color="primary">
+                    <button mat-raised-button color="primary" style="background-color: black;">
                         <mat-icon (click)="sidenav.toggle()">chevron_left</mat-icon>
                     </button>
                 </div>
@@ -21,14 +22,17 @@
                         <mat-list-item id="sair">Sair</mat-list-item>
                     </a>
                     <a href="/invoices">
-                        <mat-list-item id="invoices">WE_invoices</mat-list-item>
+                        <mat-list-item id="invoices">Faturamento</mat-list-item>
                     </a>
                 </mat-nav-list>
             </mat-sidenav>
 
             <mat-sidenav-content>
+
+                <img id="logo2" href="#" src="../../assets/logo.png" alt="restoque-logo">
+
                 <div id="abrirmenu">
-                    <button mat-raised-button color="primary">
+                    <button mat-raised-button color="primary" style="background-color: black;">
                         <mat-icon (click)="sidenav.toggle()">chevron_right</mat-icon>
                     </button>
                 </div>
@@ -43,97 +47,70 @@
                         <!---------------- MARCA ------------------->
                         <mat-form-field id="marca">
                             <mat-label>Marca</mat-label>
-                            <mat-select #brand (change)="mudarMarca($event)">
+                            <mat-select placeholder="Marca" #marcaValue (selectionChange)="mudarMarca($event.value)">
                                 <mat-option *ngFor="let marca of marcas" 
-                                [value]="marca.brand_name">{{ marca.brand_name }}</mat-option>
+                                [value]="marca.brand_Id">{{ marca.brand_name }}</mat-option>
                             </mat-select>
                         </mat-form-field>
                        
                         <!---------------- COLEÇÃO ------------------->
                         <mat-form-field id="colecao">
                             <mat-label>Coleção</mat-label>
-                            <mat-select>
+                            <mat-select placeholder="Marca" #colecaoValue (selectionChange)="mudarColecao($event.value)">
                                 <mat-option *ngFor="let colecao of colecoes" 
-                                [value]="colecao.collection_name">{{ colecao.collection_name }}</mat-option>
+                                [value]="colecao.collection_Id">{{ colecao.collection_name }}</mat-option>
                             </mat-select>
                         </mat-form-field>
 
                         <!--------------------- REPRESENTANTE --------------------->
                         <mat-form-field id="repres">
                             <mat-label>Representante</mat-label>
-                            <mat-select>
+                            <mat-select placeholder="Representante" #represValue (selectionChange)="mudarRepres($event.value)">
                                 <mat-option *ngFor="let repre of repres" 
-                                [value]="repre.agent_name">{{ repre.agent_name }}</mat-option>
+                                [value]="repre.agent_Id">{{ repre.agent_name }}</mat-option>
                             </mat-select>
                         </mat-form-field>
                         
+                        <!----------------------------- ORDER BY ------------------------------>
+                        <mat-form-field id="repres">
+                            <mat-label>Ordenar</mat-label>
+                            <mat-select placeholder="Ordenar" #orderBy (selectionChange)="mudarOrdem($event.value)">
+                                <mat-option value="1">COLEÇÃO EM ORDEM CRESCENTE</mat-option>
+                                <mat-option value="2">COLEÇÃO EM ORDEM DECRESCENTE</mat-option>
+                                <mat-option value="3">DATA DE ENTRADA EM ORDEM CRESCENTE</mat-option>
+                                <mat-option value="4">DATA DE ENTRADA EM ORDEM DECRESCENTE</mat-option>
+                                <mat-option value="5">NÚMERO DO PEDIDO EM ORDEM CRESCENTE</mat-option>
+                                <mat-option value="6">NÚMERO DO PEDIDO EM ORDEM DECRESCENTE</mat-option>
+                                <mat-option value="7">A - Z</mat-option>
+                                <mat-option value="8">Z - A</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                    </div>
+                    
+                    <!------------------------ CAMPO CNPJ ------------------------->
+                    <div>    
                         <mat-form-field id="cnpj" (keyup)="cnpjDigitado = $event.target.value">
                             <mat-label>CNPJ</mat-label>
                             <input matInput/>
                             <mat-hint>Apenas números</mat-hint>
                         </mat-form-field>
-                        <p>Cnpj digitado: {{cnpjDigitado}}</p>
+                    </div>         
 
-                    </div>
 
-                    <!------------------- FORM DE CNPJ ------------------------>
-                    <div>
-                        
-                        <!-------------- BUTTON PESQUISAR CNPJ ------------->
+                     <!-------------- BUTTON PESQUISAR CNPJ ------------->
+                     <div>
                         <button mat-raised-button
                         color="primary"
+                        style="background-color: black;"
                         id="botao-buscar" 
                         type="submit" 
                         (click)="company_doc = cnpjDigitado"
-                        (click)="buscarCnpj()">
+                        (click)="buscarInvoices()">
                         <i class="material-icons right">search</i>BUSCAR</button>
-                        
-                    </div>            
+                    </div>   
 
-                    <!-------------------- TABELA DE CNPJ --------------------->
-                    
-                    <!-- <div>
-                        <table id="tabela">
-                            <thead>
-                                <tr id="titulos-tabela">
-                                    <th id="razao_social">NOME FANTASIA</th>
-                                    <th id="cnpj">CLIFOR</th>
-                                </tr>
-                            </thead>
-                            <tbody *ngIf="clienteValido == true">
-                                <tr *ngFor="let invoice of invoices">
-                                    <td id=""> {{ invoices.orderFactory_Id }} </td>
-                                    <td id=""> {{ invoices.order_Id }} </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div> -->
-
-                    <!--------------------- FILTRO DIRETO NO GRID ------------------------>
-                    
-                    <mat-form-field id="filtro" (keyup)="aplicarFiltro($event.target.value)">
-                        <mat-label>Filtro</mat-label>
-                        <input matInput/>
-                        <mat-hint>Filtrar por qualquer campo</mat-hint>
-                    </mat-form-field>
-
-                    <!----------------------------- ORDER BY ------------------------------>
-                    <mat-form-field id="repres">
-                        <mat-label>Ordenar</mat-label>
-                        <mat-select>
-                            <mat-option value="COLEÇÃO EM ORDEM CRESCENTE">COLEÇÃO EM ORDEM CRESCENTE</mat-option>
-                            <mat-option value="COLEÇÃO EM ORDEM DECRESCENTE">COLEÇÃO EM ORDEM DECRESCENTE</mat-option>
-                            <mat-option value="DATA DE ENTRADA EM ORDEM CRESCENTE">DATA DE ENTRADA EM ORDEM CRESCENTE</mat-option>
-                            <mat-option value="DATA DE ENTRADA EM ORDEM DECRESCENTE">DATA DE ENTRADA EM ORDEM DECRESCENTE</mat-option>
-                            <mat-option value="NÚMERO DO PEDIDO EM ORDEM CRESCENTE">NÚMERO DO PEDIDO EM ORDEM CRESCENTE</mat-option>
-                            <mat-option value="NÚMERO DO PEDIDO EM ORDEM DECRESCENTE">NÚMERO DO PEDIDO EM ORDEM DECRESCENTE</mat-option>
-                            <mat-option value="A - Z">A - Z</mat-option>
-                            <mat-option value="Z - A">Z - A</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <!---------------------- DATA TABLE ---------------------->
                     <!-------------------- GRID DE INVOICES -------------------->
-
                     <div id="tabela" class="tabela-container mat-elevation-z4">
 
                         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
