--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -87,13 +87,12 @@
                         </mat-form-field>
 
                     </div>
-                    
+
                     <!------------------------ CAMPO CNPJ ------------------------->
                     <div>    
                         <mat-form-field id="cnpj" (keyup)="cnpjDigitado = $event.target.value">
-                            <mat-label>CNPJ</mat-label>
+                            <mat-label>Razão Social / CNPJ / Código</mat-label>
                             <input matInput/>
-                            <mat-hint>Apenas números</mat-hint>
                         </mat-form-field>
                     </div>         
 
