--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -8,9 +8,6 @@
         <mat-sidenav-container>
 
             <mat-sidenav #sidenav mode="over" [(opened)]="sidenavAberta">
-                <!-- <img id="logo" href="#" 
-                src="https://i.ibb.co/wszdgT7/wise-erp-logo.png" 
-                alt="wise-erp-logo"> -->
                 <img id="logo" href="#" src="../../assets/logo.png" alt="restoque-logo">
                 <div id="fecharmenu">
                     <button (click)="sidenav.toggle()" mat-raised-button color="primary" style="background-color: black;">
@@ -96,7 +93,6 @@
                         </mat-form-field>
                     </div>         
 
-
                      <!-------------- BUTTON PESQUISAR CNPJ ------------->
                      <div>
                         <button mat-raised-button
@@ -107,141 +103,34 @@
                         (click)="company_doc = cnpjDigitado"
                         (click)="buscarInvoices()">
                         <i class="material-icons right">search</i>BUSCAR</button>
-                    </div>   
+                    </div>
 
-                    <!-- <mat-card>
+                    <mat-card>
                         <mat-card-title>
-                            Teste
+                            Total Qtde Fat.: {{ total }}
+                            <br>
+                            Total Vr. Fat.: {{ total }}
                         </mat-card-title>
-                        <mat-card-content>
-                            Teste
-                        </mat-card-content>
-                    </mat-card> -->
-
+                    </mat-card>
+                    
                     <mat-card *ngFor="let invoice of invoices" class="mat-elevation-z8" style="margin: 15px 0;">
                         <mat-card-title style="text-align: center;"><mat-icon>account_box</mat-icon> Razão Social</mat-card-title>
                         <mat-card-content style="text-align: center;"><strong>Ped.: </strong>{{ invoice.orderFactory_Id }}  - {{ invoice.brand_name}}</mat-card-content>
-                        <mat-grid-list style="font-size: 0.6rem; text-align: left;" cols="4" rowHeight="4:1">
-                            <mat-grid-tile style="text-align: left;"><strong>Qtde. ped.: </strong>{{ invoice.total_quantity }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>Qtde. emb.: </strong>{{ invoice.packed_quantity }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>Qtde. fat.: </strong>{{ total_quantity_invoiced }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>% fat.: </strong>100%</mat-grid-tile>
+                        <mat-grid-list style="font-size: 0.5rem; text-align: left;" cols="4" rowHeight="4:1">
+                            <mat-grid-tile style="text-align: left;"><strong>Qtde. Ped.: </strong>{{ invoice.total_quantity }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>Qtde. Emb.: </strong>{{ invoice.packed_quantity }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>Qtde. Fat.: </strong>{{ total_quantity_invoiced }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>% Fat.: </strong>100%</mat-grid-tile>
                             <!-- <mat-grid-tile><strong>% fat.: </strong>{{ invoice.percentual_invoiced }}</mat-grid-tile> -->
                             <mat-grid-tile style="text-align: left;"><strong>Vr. Ped.: </strong>{{ invoice.total_price }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>Vr. emb.: </strong>{{ invoice.packed_price }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>Vr. fat.: </strong>R$ {{ invoice.total_price_invoiced }}</mat-grid-tile>
-                            <mat-grid-tile style="text-align: left;"><strong>Vr. % fat.: </strong>{{ invoice.invoice }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>Vr. Emb.: </strong>{{ invoice.packed_price }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>Vr. Fat.: </strong>R$ {{ invoice.total_price_invoiced }}</mat-grid-tile>
+                            <mat-grid-tile style="text-align: left;"><strong>Vr. % Fat.: </strong>{{ invoice.invoice }}</mat-grid-tile>
                         </mat-grid-list>
                         <mat-card-footer style="text-align: center;">
                             <button mat-raised-button style="background-color: black; color:white; margin: 20px;"><mat-icon>remove_red_eye</mat-icon></button>
                         </mat-card-footer>
                     </mat-card>
-
-                    <!-------------------- GRID DE INVOICES -------------------->
-                    <!-- <div id="tabela" class="tabela-container mat-elevation-z4"> -->
-
-                        <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-                            <ng-container matColumnDef="customerFab_Id">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> Clifor </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.customerFab_Id }} </td>
-                            </ng-container> -->
-
-                            <!-- cnpj Column -->
-                            <!-- <ng-container matColumnDef="company_doc">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> CNPJ </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.company_doc }} </td>
-                            </ng-container> -->
-
-                            <!-- pedido_linx Column -->
-                            <!-- <ng-container matColumnDef="orderFactory_Id">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> PEDIDO_LINX </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.orderFactory_Id }} </td>
-                            </ng-container> -->
-
-                            <!-- pedido_wise Column -->
-                            <!-- <ng-container matColumnDef="order_Id">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> PEDIDO_WISE </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.order_Id }} </td>
-                            </ng-container> -->
-
-                            <!-- nf Column -->
-                            <!-- <ng-container matColumnDef="invoice">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> NF </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.invoice }} </td>
-                            </ng-container> -->
-
-                            <!-- dt_faturamento Column -->
-                            <!-- <ng-container matColumnDef="dt_invoice">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> DATA_DE_FATURAMENTO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.dt_invoice }} </td>
-                            </ng-container> -->
-
-                            <!-- dt_fat_relat Column -->
-                            <!-- <ng-container matColumnDef="dt_invoice_relat">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> DATA_DE_FATURAMENTO_RELATÓRIO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.dt_invoice_relat }} </td>
-                            </ng-container> -->
-
-                            <!-- marca Column -->
-                            <!-- <ng-container matColumnDef="brand_name">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> MARCA </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.brand_name }} </td>
-                            </ng-container> -->
-
-                            <!-- total_pecas_pedido Column -->
-                            <!-- <ng-container matColumnDef="total_quantity">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_PEÇAS_PEDIDO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.total_quantity }} </td>
-                            </ng-container> -->
-
-                            <!-- total_valor_pedido Column -->
-                            <!-- <ng-container matColumnDef="total_price">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_VALOR_PEDIDO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.total_price }} </td>
-                            </ng-container> -->
-
-                            <!-- nf Column -->
-                            <!-- <ng-container matColumnDef="packed_quantity">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> QUANTIDADE_EMBALADA </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.packed_quantity }} </td>
-                            </ng-container> -->
-
-                            <!-- valor_embalado Column -->
-                            <!-- <ng-container matColumnDef="packed_price">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> VALOR_EMBALADO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.packed_price }} </td>
-                            </ng-container> -->
-
-                            <!-- total_pecas_faturadas Column -->
-                            <!-- <ng-container matColumnDef="total_quantity_invoiced">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_PEÇAS_FATURADAS </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.total_quantity_invoiced }} </td>
-                            </ng-container> -->
-
-                            <!-- total_valor_faturado Column -->
-                            <!-- <ng-container matColumnDef="total_price_invoiced">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> TOTAL_VALOR_FATURADO </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.total_price_invoiced }} </td>
-                            </ng-container> -->
-
-                            <!-- porcentagem_fat Column -->
-                            <!-- <ng-container matColumnDef="percentual_invoiced">
-                                <th mat-header-cell mat-sort-header *matHeaderCellDef> PORCENTAGEM_FATURADA </th>
-                                <td mat-cell *matCellDef="let invoice"> {{ invoice.percentual_invoiced }} </td>
-                            </ng-container> -->
-
-                            <!-- <tr mat-header-row
-                            *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-                            <tr mat-row
-                            *matRowDef="let row; columns: displayedColumns;"></tr>
-                        </table> -->
-
-                    <!-- </div> -->
-
-                    <!-- <mat-paginator class="col s12 mat-elevation-z8"
-                    [pageSizeOptions]="[10, 20, 50, 100]"
-                    showFirstLastButtons>
-                    </mat-paginator> -->
 
                 </div>
 
