--- a/src/app/invoices/invoices.component.html
+++ b/src/app/invoices/invoices.component.html
@@ -110,27 +110,27 @@
                             <mat-icon>poll</mat-icon> Totais
                         </mat-card-title>
                         <mat-card-content>
-                            Qtde Fat.: {{ total.sum_total_quantity_invoiced | number: '1.0-0' }}
+                            <strong>Qtde Fat:</strong><br> {{ total.sum_total_quantity_invoiced | number: '1.0-0' | replace:',':'.' }}
                             <br>
-                            Vr. Fat.: {{ total.sum_total_price_invoiced | currency: 'BRL' }}
+                            <strong>Vr Fat:</strong><br> {{ total.sum_total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' | replace:',':'.' }}
                         </mat-card-content>
                     </mat-card>
                     
                     <mat-card *ngFor="let invoice of invoices" class="mat-elevation-z8" style="margin: 15px 0;">
-                        <mat-card-title style="text-align: center; margin-bottom: 15px"><mat-icon>account_box</mat-icon> Razão Social</mat-card-title>
+                        <mat-card-title style="text-align: center; margin-bottom: 15px"><mat-icon>account_box</mat-icon> {{ invoice.customer_name }} </mat-card-title>
                         <div style="width: 100%;">
-                            <mat-card-content style="text-align: center;"><strong>Ped:</strong>{{ invoice.orderFactory_Id }}  - {{ invoice.brand_name }}</mat-card-content>
-                            <div style="width: 100%; text-align: center;"><p>Qtde</p></div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Ped:<br></strong>{{ invoice.total_quantity | number:'1.0-0' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Emb:<br></strong>{{ invoice.packed_quantity | number:'1.0-0' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Fat:<br></strong>{{ invoice.total_quantity_invoiced | number:'1.0-0' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>%<br></strong>{{ resultado }}</div>
-                            <!-- <div style="width: 25%; float: left; text-align: center;"><strong>%:<br></strong>{{ invoice.percentual_invoiced }}</div> -->
-                            <div style="width: 100%; text-align: center;"><p>Valor</p></div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' }}</div>
-                            <div style="width: 25%; float: left; text-align: center;"><strong>%<br></strong>{{ invoice.total_price_invoiced / invoice.total_price * 100 | number: '1.0-0' }}</div>
+                            <mat-card-content>
+                                <div style="font-size: large; text-align: center;"><strong>NF: </strong>{{ invoice.invoice }}  - {{ invoice.dt_invoice }}</div>
+                                <div style="font-size: small; text-align: center; margin: 15px 0"><strong>Ped Linx:</strong> {{ invoice.orderFactory_Id }}<strong>Ped Wise:</strong> {{ invoice.order_Id }}</div>
+                                <div id="card-subdiv"><strong>Ped:<br></strong>{{ invoice.total_quantity | number:'1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>Emb:<br></strong>{{ invoice.packed_quantity | number:'1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>Fat:<br></strong>{{ invoice.total_quantity_invoiced | number:'1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>%<br></strong>{{ invoice.total_quantity_invoiced / invoice.total_quantity * 100 | number: '1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>Ped:<br></strong>{{ invoice.total_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>Emb:<br></strong>{{ invoice.packed_price | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>Fat:<br></strong>{{ invoice.total_price_invoiced | currency: 'BRL' : 'symbol' : '1.0-0' | replace:',':'.' }}</div>
+                                <div id="card-subdiv"><strong>%<br></strong>{{ invoice.total_price_invoiced / invoice.total_price * 100 | number: '1.0-0' | replace:',':'.' }}</div>
+                            </mat-card-content>
                         </div>
                         <mat-card-footer style="text-align: center;">
                             <button mat-raised-button style="background-color: black; color:white; margin: 15px;"><mat-icon>remove_red_eye</mat-icon></button>
